# nnti

./: CMakeLists.txt
demos/FEApp/: CMakeLists.txt
demos/FEApp/cmake/: Dependencies.cmake  FEApp_config.h.in
demos/FEApp/example/: CMakeLists.txt
demos/FEApp/example/loca/: CMakeLists.txt  bratu.cpp  brusselator.cpp
demos/FEApp/example/nox/: CMakeLists.txt  brusselator.cpp
demos/FEApp/example/nox_stokhos/: CMakeLists.txt  ENAT_NOXSolver.cpp  heat_nonlinear_source_inverse.cpp  heat_nonlinear_source_pce.cpp  hns_jacobian_KL.cpp  linear_diffusion_pce_mpni.cpp  linear_diffusion_pce_nox.cpp  linear_diffusion_pce_nox_gs.cpp  linear_diffusion_pce_nox_jacobi.cpp
demos/FEApp/example/piro/: CMakeLists.txt  FEApp_Dakota.cpp  FEApp_SGAnalysis.cpp  FEApp_SGSolve.cpp  FEApp_Solve.cpp  dakota_pce_mp_linear.in  dakota_sg_linear.in  dakota_sg_linear_target.txt  input_dakota_pce_linear.xml  input_dakota_pce_mp_linear.xml  input_loca_bratu.xml  input_loca_brusselator.xml  input_mpni_nox_linear.xml  input_nox_brusselator.xml  input_nox_hns.xml  input_sg_analysis_linear.xml  input_sg_nox_hns.xml  input_sg_nox_linear.xml
demos/FEApp/example/stokhos/: CMakeLists.txt  linear_diffusion_pce.cpp  linear_diffusion_pce_gs.cpp  linear_diffusion_pce_jacobi.cpp  linear_diffusion_pce_jacobi_Kkk.cpp  linear_diffusion_pce_jacobi_belos.cpp  linear_diffusion_pce_jacobi_mrhs.cpp
demos/FEApp/src/: CMakeLists.txt  FEApp_AbstractDiscretization.hpp  FEApp_AbstractElement.hpp  FEApp_AbstractFunction.hpp  FEApp_AbstractInitPostOp.hpp  FEApp_AbstractNodeBCStrategy.hpp  FEApp_AbstractNodeBCStrategy_NTBase.hpp  FEApp_AbstractPDE.hpp  FEApp_AbstractPDE_NTBase.hpp  FEApp_AbstractProblem.hpp  FEApp_AbstractQuadrature.hpp  FEApp_AbstractResponseFunction.hpp  FEApp_AbstractSourceFunction.hpp  FEApp_Application.cpp  FEApp_Application.hpp  FEApp_BoundaryFlux1DResponseFunction.cpp  FEApp_BoundaryFlux1DResponseFunction.hpp  FEApp_BrusselatorNodeBCStrategy.cpp  FEApp_BrusselatorNodeBCStrategy.hpp  FEApp_BrusselatorNodeBCStrategyImpl.hpp  FEApp_BrusselatorPDE.cpp  FEApp_BrusselatorPDE.hpp  FEApp_BrusselatorPDEImpl.hpp  FEApp_BrusselatorParameters.hpp  FEApp_BrusselatorProblem.cpp  FEApp_BrusselatorProblem.hpp  FEApp_CZeroDiscretization.cpp  FEApp_CZeroDiscretization.hpp  FEApp_ConfigDefs.h  FEApp_ConstantFunction.hpp  FEApp_ConstantNodeBCStrategy.cpp  FEApp_ConstantNodeBCStrategy.hpp  FEApp_ConstantNodeBCStrategyImpl.hpp  FEApp_ConstantSourceFunction.hpp  FEApp_CubicSourceFunction.hpp  FEApp_DiscretizationFactory.cpp  FEApp_DiscretizationFactory.hpp  FEApp_ElementFactory.cpp  FEApp_ElementFactory.hpp  FEApp_ExponentialSourceFunction.hpp  (+47 more)
demos/FEApp/test/: CMakeLists.txt
demos/FEApp/test/loca/: CMakeLists.txt
(+253 files in other folders)
